--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -181,6 +181,9 @@
             </li>
           </ul>
           <p>
+            Description:
+          </p>
+          <p>
             {% if episode.description %} {{ episode.description }} {% else %} No description {% endif %}
           </p>
         </div>
