--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -1,57 +1,30 @@
-<div class="row">
-  <div class="col-12 color-3 dope-options">
-    <div class="dope-buttons dope-buttons-r">
-      <a class="btn-dope" data-toggle="collapse" href="#general-collapse" aria-expanded="true" aria-controls="general-collapse">
-        <span class="active">
-          General Settings
-        </span>
-        <span class="exp-icon">
-          <i class="fas fa-ellipsis-v"></i>
-        </span>
-      </a>      
-      <a class="btn-dope" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
-        <span class="active">
-          Change Password
-        </span>
-        <span class="exp-icon">
-          <i class="fas fa-ellipsis-v"></i>
-        </span>
-      </a>
-      <a class="btn-dope" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
-        <span class="active">
-          Delete Account
-        </span>
-        <span class="exp-icon">
-          <i class="fas fa-ellipsis-v"></i>
-        </span>      
-      </a>
-    </div>
-  </div>
-</div>
+{% load i18n lazysignup_tags %}
 {% if errors or message %}
   {% include "errors.min.html" %}
 {% endif %}
-<div class="row collapse fade settings-collapse show" id="general-collapse">
-  <div class="col-12 dope-wrapper">
+<div class="row">
+  <div class="col-12 dope-wrapper collapse fade settings-collapse show" id="general-collapse">
     <form class="settings-form" action="{% url 'settings' %}" method="POST">
       {% csrf_token %}
       <div class="form-row">
-        <div class="col-12 dope-form-group">
-          <label for="email">Email</label>
-        </div>
-        <div class="col dope-form-group">
-          <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}" />
-        </div>
-        <div class="col-auto">
-          <button class="btn-dope" type="submit">
-            <span class="active">
-              Save
-            </span>
-            <span>
-              <i class="fas fa-save"></i>
-            </span>
-          </button>
-        </div>
+        {% if not user|is_lazy_user %}
+          <div class="col-12 dope-form-group">
+            <label for="email">Email</label>
+          </div>
+          <div class="col dope-form-group">
+            <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}" />
+          </div>
+          <div class="col-auto">
+            <button class="btn-dope" type="submit">
+              <span class="active">
+                Save
+              </span>
+              <span>
+                <i class="fas fa-save"></i>
+              </span>
+            </button>
+          </div>
+        {% endif %}
         <div class="col-12 dope-form-group">
           <label for="theme">Theme</label>
           <div class="dope-buttons p-0">
@@ -76,42 +49,49 @@
       </div>
     </form>
   </div>
-</div>
-<div class="row collapse fade settings-collapse" id="change-collapse">
-  <div class="col-12 dope-wrapper">
-    <form class="settings-form" action="{% url 'change_password' %}" method="POST">
-      {% csrf_token %}
-      <div class="form-row">
-        <div class="col-12 dope-form-group">
-          <label for="settings-oldpassword">Old password</label>
-          <input class="dope-field" type="password" name="oldpassword" required id="settings-oldpassword" />
+  <div class="col-12 dope-wrapper collapse fade settings-collapse" id="change-collapse">
+    {% if not user|is_lazy_user %}
+      <form class="settings-form" action="{% url 'change_password' %}" method="POST">
+        {% csrf_token %}
+        <div class="form-row">
+          <div class="col-12 dope-form-group">
+            <label for="settings-oldpassword">Old password</label>
+            <input class="dope-field" type="password" name="oldpassword" required id="settings-oldpassword" />
+          </div>
+          <div class="col-12 dope-form-group">
+            <label for="settings-password1">New password</label>
+            <input class="dope-field" type="password" name="password1" required id="settings-password1" />
+          </div>
+          <div class="col-12 dope-form-group">
+            <label for="settings-password2">New password (again)</label>
+          </div>
+          <div class="col dope-form-group">
+            <input class="dope-field" type="password" name="password2" required id="settings-password2" />
+          </div>
+          <div class="col-auto">
+            <button class="btn-dope" type="submit">
+              <span class="active">
+                Save
+              </span>
+              <span>
+                <i class="fas fa-save"></i>
+              </span>
+            </button>
+          </div>
         </div>
-        <div class="col-12 dope-form-group">
-          <label for="settings-password1">New password</label>
-          <input class="dope-field" type="password" name="password1" required id="settings-password1" />
-        </div>
-        <div class="col-12 dope-form-group">
-          <label for="settings-password2">New password (again)</label>
-        </div>
-        <div class="col dope-form-group">
-          <input class="dope-field" type="password" name="password2" required id="settings-password2" />
-        </div>
-        <div class="col-auto">
-          <button class="btn-dope" type="submit">
-            <span class="active">
-              Save
-            </span>
-            <span>
-              <i class="fas fa-save"></i>
-            </span>
-          </button>
-        </div>
-      </div>
-    </form>
+      </form>
+    {% else %}
+      <p>
+        This will be a convert form.
+      </p>
+      <button class="btn-dope">
+        <span class="active">
+          Convert
+        </span>
+      </button>
+    {% endif %}
   </div>
-</div>    
-<div class="row collapse fade settings-collapse" id="solong-collapse">
-  <div class="col-12 dope-wrapper">
+  <div class="col-12 dope-wrapper collapse fade settings-collapse" id="solong-collapse">
     <p>
       Delete account? Your playlist and subscriptions will be lost forever.
     </p>
