--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -187,22 +187,19 @@
         <p>
           Create a temporary user account linked to your browser to try out all the features.
         </p>
-        <div class="dope-buttons dope-buttons-c">
-          <button class="btn-dope">
-            <span>
-              Coming soon!
-            </span>
-          </button>
-        </div>
-        <!--<form class="tryout-form" method="POST" action="{% url 'tryout' %}">
+        <form class="tryout-form" method="POST" action="{% url 'tryout' %}">
+          {% csrf_token %}
           <div class="dope-buttons dope-buttons-c">
             <button type="submit" class="btn-dope">
               <span class="active">
                 Tryout
               </span>
+              <span>
+                <i class="fas fa-exclamation"></i>
+              </span>
             </button>
           </div>
-        </form>-->
+        </form>
       </div>
     </div>
   </div>
