--- a/index/static/style.css
+++ b/index/static/style.css
@@ -193,8 +193,7 @@ form {
   max-width: 275px;
 }
 .logo {
-  text-align: center;
-  margin: 40px 0;
+  margin: 50px 0;
 }
 .dash-wrapper {
   color: unset;
@@ -241,11 +240,12 @@ form {
   padding: 0 20px;
 }
 #splash {
-  padding: 0 0 20px;
+  padding: 0;
   min-height: 320px;
 }
 #splash h1 {
-  margin-bottom: 20px;
+  padding-bottom: 40px;
+  margin: 0;
 }
 .no-touch #splash .dope-result:hover,
 #splash .dope-result.expanded {
@@ -721,7 +721,7 @@ form {
 }
 .charts .dope-result h1 {
   font-size: 16px;
-  margin-bottom: 4px;
+  margin-bottom: 5px;
 }
 .charts .dope-result h2 {
   margin-bottom: 0;
@@ -746,7 +746,7 @@ form {
 }
 .previous .dope-result h1,
 .previous .dope-result h2 {
-  margin-bottom: 4px;
+  margin-bottom: 5px;
   overflow: hidden;
 }
 .previous .dope-result h1 {
