--- a/podcasts/templates/results-options.html
+++ b/podcasts/templates/results-options.html
@@ -1,3 +1,4 @@
+{% load i18n lazysignup_tags %}
 {% if results.options %}
   <div class="row">
     <div class="col-12 color-3 dope-options">
@@ -72,14 +73,25 @@
               <i class="fas fa-ellipsis-v"></i>
             </span>
           </a>
-          <a class="btn-dope" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
-            <span class="active">
-              Change Password
-            </span>
-            <span class="exp-icon">
-              <i class="fas fa-ellipsis-v"></i>
-            </span>
-          </a>
+          {% if not user|is_lazy_user %}
+            <a class="btn-dope" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
+              <span class="active">
+                Change Password
+              </span>
+              <span class="exp-icon">
+                <i class="fas fa-ellipsis-v"></i>
+              </span>
+            </a>          
+          {% else %}
+            <a class="btn-dope" data-toggle="collapse" href="#convert-collapse" aria-expanded="false" aria-controls="convert-collapse">
+              <span class="active">
+                Convert Account
+              </span>
+              <span class="exp-icon">
+                <i class="fas fa-ellipsis-v"></i>
+              </span>
+            </a>
+          {% endif %}
           <a class="btn-dope" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
             <span class="active">
               Delete Account
