--- a/index/templates/slick.min.html
+++ b/index/templates/slick.min.html
@@ -1,19 +1,1 @@
-{% with results.genres as genres %}<div class="slick">{% for genre in genres %}<div class="slick-slide"><a class="slick-header browse-link" href="/search/?genre={{ genre.url_format }}&view=grid"><h1>{{ genre }}</h1><p>{{ genre.n_podcasts }} podcast{{ genre.n_podcasts|pluralize }}</p></a><!--<ul>
-          {% for podcast in genre.podcasts %}
-            <li>
-              <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
-                <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'"
-                  alt="{{ podcast.object.title }}" />
-              </a>
-            </li>
-          {% endfor %}
-        </ul>--></div>{% endfor %}</div>{% endwith%} {% with results.languages as languages %}<div class="slick">{% for language in languages %}<div class="slick-slide"><a class="slick-header browse-link" href="/search/?language={{ language.url_format }}&view=grid"><h1>{{ language }}</h1><p>{{ language.n_podcasts }} podcast{{ language.n_podcasts|pluralize }}</p></a><!--<ul>
-          {% for podcast in language.podcasts %}
-            <li>
-              <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
-                <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'"
-                  alt="{{ podcast.object.title }}" />
-              </a>
-            </li>
-          {% endfor %}
-        </ul>--></div>{% endfor %}</div>{% endwith%} {% if request.is_ajax %}<script>initSlick()</script>{% endif %}
+<div class="col-12 results color-2">{% with results.genres as genres %}<div class="slick">{% for genre in genres %}<div class="slick-slide"><a class="slick-header browse-link" href="/search/?genre={{ genre.selected_genre.url_format }}&view=grid"><h1>{{ genre.selected_genre }}</h1><p>{{ genre.selected_genre.n_podcasts }} podcast{{ genre.selected_genre.n_podcasts|pluralize }}</p></a><ul>{% for podcast in genre.podcasts %}<li><a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}"><img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg" onerror="this.src=&#34;//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg&#34;" alt="{{ podcast.object.title }}"></a></li>{% endfor %}</ul></div>{% endfor %}</div>{% endwith%} {% with results.languages as languages %}<div class="slick">{% for language in languages %}<div class="slick-slide"><a class="slick-header browse-link" href="/search/?language={{ language.selected_language.url_format }}&view=grid"><h1>{{ language.selected_language }}</h1><p>{{ language.selected_language.n_podcasts }} podcast{{ language.selected_language.n_podcasts|pluralize }}</p></a><ul>{% for podcast in language.podcasts %}<li><a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}"><img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg" onerror="this.src=&#34;//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg&#34;" alt="{{ podcast.object.title }}"></a></li>{% endfor %}</ul></div>{% endfor %}</div>{% endwith%}</div>{% if request.is_ajax %}<script>initSlick()</script>{% endif %}
